Updated by Yuri
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6074 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/hu/downloadsFooter.htm
+++ b/Remote/hu/downloadsFooter.htm
@@ -1,19 +1,12 @@
-							</td>
-						</tr>
-					</table>
-					        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-					<br>
-					<table align="center">
-						<form method="get" action="newdownload">
-							<tr>
-								<td>Magnet letöltés:</td>
-								<td><input type="text" name="uri" size="50"></td>
-								<td>
-									<input type="submit" value="Indít">
-								</td>
-							</tr>
-						</form>
-					</table>
-				</td>
-			</tr>
-		</table>
+﻿<!--downloadsFooter-->
+<br>
+<form method="get" action="newdownload" ID="Form1">
+	<div>
+			<label>Magnet link:</label>
+			<input type="text" name="uri" size="50" />
+			<input type="submit" value="Letölt" />
+	</div>
+</form>
+</div>
+</div>
+<!--/downloadsFooter-->
