--- a/Remote/hu/uploadsQueueEnd.htm
+++ b/Remote/hu/uploadsQueueEnd.htm
@@ -1,8 +1,9 @@
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+﻿<!-- uploadsQueueEnd -->
 <%? queue_expanded %>
 						<tr>
-							<td class="viewheader" colspan="6"></td>
+							<th colspan="6"></th>
 						</tr>
 					</table>
-					<br>
+				</div>
 <%?%>
+<!-- /uploadsQueueEnd -->
