--- a/Remote/hu/downloadsBottom.htm
+++ b/Remote/hu/downloadsBottom.htm
@@ -1,5 +1,4 @@
-									<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-                                    <tr>
-										<td class="viewheader" colspan="7"></td>
+﻿									<tr>
+										<th colspan="7"></th>
 									</tr>
 								</table>
