--- a/Remote/hu/downloadsDownload.htm
+++ b/Remote/hu/downloadsDownload.htm
@@ -1,27 +1,32 @@
-									<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-                                    <tr>
+﻿									<tr>
 <%? download_is_expanded %>
-										<td class="viewrow"><a class="emblink" href="?modify_id=<%= download_id %>&modify_action=collapse"><b>-</b></a> <%= download_filename %></td>
+										<td class="filename"><div title="<%= download_filename %>"><a class="noline" href="?modify_id=<%= download_id %>&amp;modify_action=collapse">-</a> <%= download_filename %></div></td>
 <%?%><%? download_is_collapsed %>
-										<td class="viewrow"><a class="emblink" href="?modify_id=<%= download_id %>&modify_action=expand"><b>+</b></a> <%= download_filename %></td>
+										<td class="filename"><div title="<%= download_filename %>"><a class="noline" href="?modify_id=<%= download_id %>&amp;modify_action=expand">+</a> <%= download_filename %></div></td>
 <%?%><%? !download_is_expanded %><%? !download_is_collapsed %>
-										<td class="viewrow"><%= download_filename %></td>
+										<td class="filename"><div title="<%= download_filename %>"><%= download_filename %></div></td>
 <%?%><%?%>
-										<td nowrap class="viewrow" align="center"><%= download_size %></td>
-										<td nowrap class="viewrow" align="center" style="padding: 0px;"><table width="100%" height="16" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#0000FF" width="<%= download_percent %>%"></td><td width="<%= download_percent_inverse %>%"></td></tr></table></td>
-										<td nowrap class="viewrow" align="center"><%= download_speed %></td>
-										<td nowrap class="viewrow" align="center"><%= download_sources %></td>
-										<td nowrap class="viewrow" align="center"><%= download_status %></td>
-										<td nowrap class="viewrow" align="center">
+										<td><%= download_size %></td>
+										<td height="16">
+											<div class="progcontainer">
+												<div class="progbar" style="width:<%= download_percent %>%;"></div>
+												<div class="progprocent"><%= download_percent %>%</div>
+											</div>
+										
+										</td>
+										<td><%= download_speed %></td>
+										<td><%= download_sources %></td>
+										<td><%= download_status %></td>
+										<td>
 <%? download_is_complete %>
-											<a href="?modify_id=<%= download_id %>&modify_action=clear">
-                                    Töröl</a>
+											<a href="?modify_id=<%= download_id %>&amp;modify_action=clear" title="Letöltési sor törlése. (Ez nem fogja törölni a tényleges fájlt.)">Törlés</a>
 <%?%><%? !download_is_complete %>
-<%? download_is_paused %> <a href="?modify_id=<%= download_id %>&modify_action=resume">
-                                    Folytat</a> -
-<%?%><%? !download_is_paused %> <a href="?modify_id=<%= download_id %>&modify_action=pause">
-                                    Szünet</a> -
-                                    <a href="?modify_id=<%= download_id %>&modify_action=more_sources">
-                                    Több forrás</a> -
-<%?%> <a href="?modify_id=<%= download_id %>&modify_action=cancel">Mégse</a>
-<%?%></td></tr>
+<%? download_is_paused %>
+											<a href="?modify_id=<%= download_id %>&amp;modify_action=resume">Folytatás</a> -
+<%?%><%? !download_is_paused %>
+											<a href="?modify_id=<%= download_id %>&amp;modify_action=pause">Szünet</a> -
+<%?%>										<a href="?modify_id=<%= download_id %>&amp;modify_action=more_sources">Több forrás</a> -
+											<a href="?modify_id=<%= download_id %>&amp;modify_action=cancel">Törlés</a>
+<%?%>
+										</td>
+									</tr>
