--- a/Remote/hu/downloadsSource.htm
+++ b/Remote/hu/downloadsSource.htm
@@ -1,13 +1,12 @@
-									<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-                                    <tr>
-										<td nowrap class="viewrow">&nbsp;&nbsp;&nbsp;&nbsp;<%= source_caption %></td>
-										<td nowrap class="viewrow" align="center"><%= source_volume %></td>
-										<td nowrap class="viewrow" align="center"></td>
-										<td nowrap class="viewrow" align="center"><%= source_speed %></td>
-										<td nowrap class="viewrow" align="center"><%= source_agent %></td>
-										<td nowrap class="viewrow" align="center"><%= source_status %></td>
-										<td nowrap class="viewrow" align="center">
-											<a href="?modify_id=<%= source_id %>&modify_action=access">
-                                    Belép</a> -
-                                    <a href="?modify_id=<%= source_id %>&modify_action=forget">
-                                    Elfelejt</a></td></tr>
+﻿									<tr>
+										<td class="filename"><div style="margin-left: 1em;"><%= source_caption %></div></td>
+										<td><%= source_volume %></td>
+										<td></td>
+										<td><%= source_speed %></td>
+										<td><%= source_agent %></td>
+										<td><%= source_status %></td>
+										<td>
+											<a href="?modify_id=<%= source_id %>&modify_action=access">Hozzáfér</a> -
+											<a href="?modify_id=<%= source_id %>&modify_action=forget">Elfelejt</a>
+										</td>
+									</tr>
