--- a/Remote/hu/networkFooter.htm
+++ b/Remote/hu/networkFooter.htm
@@ -1,4 +1,3 @@
-				</td>
-			</tr>
-		</table>
-                <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+﻿<!-- networkFooter -->
+				</div>
+<!-- /networkFooter -->
