--- a/Remote/hu/networkNetEnd.htm
+++ b/Remote/hu/networkNetEnd.htm
@@ -1,8 +1,7 @@
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<%? network_connected %>
+﻿<%? network_connected %>
 						<tr>
-							<td class="viewheader" colspan="9"></td>
+							<th colspan="9"></th>
 						</tr>
 					</table>
-					<br>
+				</div>
 <%?%>
