--- a/Remote/hu/searchBottom.htm
+++ b/Remote/hu/searchBottom.htm
@@ -1,5 +1,6 @@
-									<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-                                    <tr>
-										<td class="viewheader" colspan="7"></td>
+﻿<!-- searchBottom -->
+									<tr>
+										<th colspan="7"></th>
 									</tr>
 								</table>
+<!-- /searchBottom -->
