--- a/Remote/hu/searchColumn.htm
+++ b/Remote/hu/searchColumn.htm
@@ -1,2 +1,3 @@
-										<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-                                        <td class="viewheader" align="<%= column_align %>"><a class="emblink" href="?id=<%= search_id %>&sort=<%= column_id %>"><%= column_caption %></a></td>
+﻿<!--searchColumn -->
+										<th><a class="nolink" href="?id=<%= search_id %>&amp;sort=<%= column_id %>"><%= column_caption %></a></th>
+<!--/searchColumn-->
