--- a/Remote/hu/searchFooter.htm
+++ b/Remote/hu/searchFooter.htm
@@ -1,7 +1,4 @@
-							</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-		</table>
-                            <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+﻿<!-- searchFooter -->
+							</div>
+						</div>
+<!-- /searchFooter -->
