--- a/Remote/hu/searchMiddle.htm
+++ b/Remote/hu/searchMiddle.htm
@@ -1,2 +1,3 @@
+﻿<!-- searchMiddle -->
 									</tr>
-                                    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- /searchMiddle -->
