--- a/Remote/hu/searchNew.htm
+++ b/Remote/hu/searchNew.htm
@@ -1,34 +1,22 @@
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<td class="tabsel">Új keresés</td>
-<td class="tabedg">&nbsp;</td>
-</tr> </table> </td> </tr>
-<tr>
-	<td class="frame">
-		<div>
-			Írd be a keresendő szót vagy szavakat a mezőbe és kattints a <b>
-            Keresés</b> gombra. Fájltípus kiválasztása a listából lehetséges.</div>
+﻿										<li class="active"><a class="noline" href="?id=0">Új keresés</a></li>
+								</ul>
+<div style="border: 1px #000 solid;padding: 5px;">
+			<p>A keresés indításához írja be a keresendő kifejezést és kattintson a <strong>Keresés 
+				</strong> gombra. Ha le szeretné szűkíteni a keresét egy bizonyos fájltípusra, 
+			akkor válasszon a fájltípus listából (ajánlott).</p>
+	
+	<div style="text-align:right; width: 30em;">		
 		<form method="get" action="newsearch">
-			<table align="center">
-				<tr>
-					<td>Keresés:</td>
-					<td><input type="text" name="search" size="30"></td>
-				</tr>
-				<tr>
-					<td>Fájltípus:</td>
-					<td>
-						<select name="schema">
-							<option>Bármilyen fájl</option>
+
+			<label>Keresendő kifejezés:</label>
+					<input type="text" name="search" class="regularinput" /><br />
+			<label>Fájltípus:</label>
+					
+						<select name="schema" class="regularinput">
+							<option value="">Bármilyen</option>
 							<%= schema_option_list %>
 						</select>
-					</td>
-				</tr>
-				<tr>
-					<td></td>
-				</tr>
-				<tr>
-					<td colspan="2" align="center">
+				<br />
 						<input type="submit" value="Keresés">
-					</td>
-				</tr>
-			</table>
 		</form>
+	</div>
