--- a/Remote/hu/searchRowEnd.htm
+++ b/Remote/hu/searchRowEnd.htm
@@ -1,2 +1,3 @@
+﻿<!-- searchRowEnd -->
 									</tr>
-                                    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<!-- /searchRowEnd -->
