--- a/Remote/hu/searchTop.htm
+++ b/Remote/hu/searchTop.htm
@@ -1,24 +1,26 @@
-										<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-                                        <td class="tab"><a href="?id=0">Új 
-                                        keresés</a><table width="100%">
-									<tr>
-										<form method="get">
-											<input type="hidden" name="id" value="<%= search_id %>">
-											<input type="hidden" name="setfilter" value="1">
-											<td style="font-size: 7pt">
-                                            <font size="2">Szűrő:</font></td>
-											<td><input type="text" name="filter" value="<%= search_filter %>" size="20"></td>
-											<td>
-                                            <input type="submit" value="Szűr"></td>
-											<td style="font-size: 7pt" align="right" width="100%">
-												<font size="2">
-                                                <a href="?id=<%= search_id %>&refresh=<%= random %>">
-                                                Oldal frissítése</a> -
-<%? searching %> <a href="?id=<%= search_id %>&stop=1"><b>Keresés leállítása</b></a> -
-<%?%> <a href="?close=<%= search_id %>">Bezárás</a> </font>
-											</td>
+﻿
+<!-- searchTop -->
+										<li class="active"><a class="noline" href="?id=0">Új keresés</a></li>
+								</ul>
+
+<div style="border: 1px #000 solid;padding: 5px;" id="content">
+	<div id="functions"><a href="?id=<%= search_id %>&amp;refresh=<%= random %>">Lap frissítése</a> - 
+<%? searching %>
+												<a href="?id=<%= search_id %>&amp;stop=1"><b>Keresés leállítása</b></a> -
+<%?%>
+												<a href="?close=<%= search_id %>">Keresés bezárása</a>
+	</div>
+		<div id="filters">
+										<form method="get" action="">
+											<input type="hidden" name="id" value="<%= search_id %>" />
+											<input type="hidden" name="setfilter" value="1" />
+											<label>Szűrő:</label>
+											<input type="text" name="filter" value="<%= search_filter %>" size="20" />
+											<input type="submit" value="Szűrés" />
+
 										</form>
-									</tr>
-								</table>
-								<table width="100%" cellspacing="0" style="border-collapse: collapse">
-									<tr>
+		</div>
+										<br />
+<table>
+	<tr>
+<!--/searchTop-->
