--- a/Remote/hu/uploadsFile.htm
+++ b/Remote/hu/uploadsFile.htm
@@ -1,8 +1,10 @@
-						<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-                        <tr>
-							<td class="viewrow"><%= file_filename %></td>
-							<td class="viewrow"><%= file_user %></td>
-							<td class="viewrow" align="center"><%= file_size %></td>
-							<td class="viewrow" align="center"><%= file_speed %></td>
-							<td class="viewrow" align="center"><%= file_agent %></td>
-							<td class="viewrow" align="center"><a href="?drop=<%= file_id %>">X</a></td></tr>
+﻿<!-- uploadsFile -->
+						<tr>
+							<td class="filename"><div title="<%= file_filename %>"><%= file_filename %></div></td>
+							<td class="filename"><div title="<%= file_user %>"><%= file_user %></div></td>
+							<td><%= file_size %></td>
+							<td><%= file_speed %></td>
+							<td><%= file_agent %></td>
+							<td><a href="?drop=<%= file_id %>" class="noline bold">X</a></td>
+						</tr>
+<!-- /uploadsFile -->
