--- a/Remote/hu/uploadsHeader.htm
+++ b/Remote/hu/uploadsHeader.htm
@@ -1,27 +1,17 @@
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a href="Home">Kezdőlap</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a href="search">Keresés</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a href="downloads">Letöltések</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Feltöltések</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a href="network">Hálózat</a></td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<p align="right">
-						<font size="2"><a href="?refresh=<%= random %>">Oldal 
-                        frissítése</a> </font>
-					</p>
+﻿<!-- uploadsHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Kezdőlap</a></li>
+				<li class="inactive"><a href="search" class="noline">Keresés</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Letöltések</a></li>
+				<li class="active"><a href="uploads" class="noline">Feltöltések</a></li>
+				<li class="inactive"><a href="network" class="noline">Hálózat</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
+						<a href="?refresh=<%= random %>">Lap frissítése</a>
+			</div>
+<!-- /uploadsHeader -->
