--- a/Remote/nl/home.htm
+++ b/Remote/nl/home.htm
@@ -1,78 +1,57 @@
-<table width="95%" align="center" cellspacing="0" cellpadding="0">
-	<tr>
-		<td align="center">
-			<table width="100%" cellspacing="0">
-				<tr>
-					<td class="tabedg">&nbsp;</td>
-					<td class="tabsel">Home</td>
-					<td class="tabfil">&nbsp;</td>
-					<td class="tab"><a class="tab" href="search">Zoeken</a></td>
-					<td class="tabfil">&nbsp;</td>
-					<td class="tab"><a class="tab" href="downloads">Downloads</a></td>
-					<td class="tabfil">&nbsp;</td>
-					<td class="tab"><a class="tab" href="uploads">Uploads</a></td>
-					<td class="tabfil">&nbsp;</td>
-					<td class="tab"><a class="tab" href="network">Netwerken</a></td>
-					<td class="tabedg">&nbsp;</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-	<tr>
-		<td class="frame">
-			<p>
-				Welkom op <b>Shareaza's Web Interface</b>.
-			</p>
-			<p>
-				Deze web console biedt volledige controle over je zoekopdrachten, downloads,
-				uploads en netwerkverbindingen.
-			</p>
-			<br>
-			<table cellspacing="8">
-				<tr>
-					<td width="4" />
-					<td><a href="search"><b>Zoeken</b></a> - Zoek naar bestanden, werk met zoekresultaten,
-						selecteer bestanden om ze te downloaden.</td>
-				</tr>
-				<tr>
-					<td width="4" />
-					<td><a href="downloads"><b>Downloads</b></a> - Beheer je downloads, zoals pauzeren, hervatten 
-                                                of volledige bestanden wissen.</td>
-				</tr>
-				<tr>
-					<td width="4" />
-					<td><a href="uploads"><b>Uploads</b></a> - Bekijk je uploads.</td>
-				</tr>
-				<tr>
-					<td width="4" />
-					<td><a href="network"><b>Netwerken</b></a> - Bekijk en beheer je netwerkverbindingen, 
-						verbindt met verschillende P2P netwerken of verbreek de verbinding, of sluit Shareaza af.</td>
-				</tr>
-			</table>
-			<br>
-			<form method="get" action="newsearch" ID="Form1">
-				<table align="center">
-					<tr>
-						<td>Snel Zoeken:</td>
-						<td><input type="text" name="search" size="30"></td>
-						<td>
-							<input type="submit" value="Start">
-						</td>
-					</tr>
-				</table>
-			</form>
-			<br>
-			<form method="get" action="newdownload" ID="Form2">
-				<table align="center">
-					<tr>
-						<td>Magnet Downloaden:</td>
-						<td><input type="text" name="uri" size="50"></td>
-						<td>
-							<input type="submit" value="Start">
-						</td>
-					</tr>
-				</table>
-			</form>
-		</td>
-	</tr>
-</table>
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="active"><a href="home" class="noline">Home</a></li>
+				<li class="inactive"><a href="search" class="noline">Zoeken</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Downloads</a></li>
+				<li class="inactive"><a href="uploads" class="noline">Uploads</a></li>
+				<li class="inactive"><a href="network" class="noline">Netwerken</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+<!-- main body -->
+		<div id="frame">
+			<p>Welkom op <b>Shareaza's Web Interface</b>.</p>
+			<p>Deze web console biedt volledige controle over je zoekopdrachten, downloads, uploads en netwerkverbindingen.</p>
+			<div style="float: right; width: 40em;">
+				<h3>Start downloading:</h3>
+				<div style="text-align: right;">
+				<form method="get" action="newsearch" ID="Form1">
+					<label>Snel Zoeken</label>
+					<input type="text" name="search" size="20">
+					<select name="schema">
+						<option value="">Any file</option>
+						<option value="http://www.shareaza.com/schemas/application.xsd">Application</option>
+						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
+						<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
+						<option value="http://www.limewire.com/schemas/book.xsd">Book</option>
+						<option value="http://www.shareaza.com/schemas/collection.xsd">Collection</option>
+						<option value="http://www.shareaza.com/schemas/image.xsd">Image</option>
+						<option value="http://www.shareaza.com/schemas/presentation.xsd">Presentation</option>
+						<option value="http://www.shareaza.com/schemas/rom.xsd">ROM Image</option>
+						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
+						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Source Code</option>
+						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Spreadsheet</option>
+						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitle</option>
+						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
+						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Word Processing</option>
+					</select>
+					<input type="submit" value="Go">
+				</form><br />
+				<form method="get" action="newdownload" ID="Form2">
+					<label>Magnet Downloaden:</label>
+					<input type="text" name="uri" size="35">
+					<input type="submit" value="Go">
+				</form>
+				</div>
+			</div>
+			<h3>Useful links:</h3>
+			<ul>
+				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
+			</ul>
+		</div>
