--- a/Remote/nl/networkHeader.htm
+++ b/Remote/nl/networkHeader.htm
@@ -1,22 +1,17 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">Home</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Zoeken</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">Downloads</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="uploads">Uploads</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Netwerken</td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
+<!-- networkHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Home</a></li>
+				<li class="inactive"><a href="search" class="noline">Zoeken</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Downloads</a></li>
+				<li class="inactive"><a href="uploads" class="noline">Uploads</a></li>
+				<li class="active"><a href="network" class="noline">Netwerken</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
+						<a href="?refresh=<%= random %>">Ververs Pagina</a>
+			</div>
+<!-- /networkHeader -->
