--- a/Remote/nl/networkNetEnd.htm
+++ b/Remote/nl/networkNetEnd.htm
@@ -1,7 +1,7 @@
 <%? network_connected %>
 						<tr>
-							<td class="viewheader" colspan="9"></td>
+							<th colspan="9"></th>
 						</tr>
 					</table>
-					<br>
+				</div>
 <%?%>
