--- a/Remote/nl/networkRow.htm
+++ b/Remote/nl/networkRow.htm
@@ -1,11 +1,11 @@
 						<tr>
-							<td nowrap class="viewrow"><%= row_caption %></td>
-							<td nowrap class="viewrow" align="center"><%= row_time %></td>
-							<td nowrap class="viewrow" align="center"><%= row_packets %></td>
-							<td nowrap class="viewrow" align="center"><%= row_bandwidth %></td>
-							<td nowrap class="viewrow" align="center"><%= row_total %></td>
-							<td nowrap class="viewrow" align="center"><%= row_mode %></td>
-							<td nowrap class="viewrow" align="center"><%= row_leaves %></td>
-							<td nowrap class="viewrow"><%= row_agent %></td>
-							<td nowrap class="viewrow" align="center"><a href="?drop=<%= row_id %>">X</a></td>
+							<td><%= row_caption %></td>
+							<td><%= row_time %></td>
+							<td><%= row_packets %></td>
+							<td><%= row_bandwidth %></td>
+							<td><%= row_total %></td>
+							<td><%= row_mode %></td>
+							<td><%= row_leaves %></td>
+							<td><%= row_agent %></td>
+							<td><a href="?drop=<%= row_id %>" class="noline bold">X</a></td>
 						</tr>
