--- a/Remote/nl/searchBottom.htm
+++ b/Remote/nl/searchBottom.htm
@@ -1,4 +1,6 @@
+<!-- searchBottom -->
 									<tr>
-										<td class="viewheader" colspan="7"></td>
+										<th colspan="7"></th>
 									</tr>
 								</table>
+<!-- /searchBottom -->
