--- a/Remote/nl/searchFooter.htm
+++ b/Remote/nl/searchFooter.htm
@@ -1,6 +1,4 @@
-							</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-		</table>
+<!-- searchFooter -->
+							</div>
+						</div>
+<!-- /searchFooter -->
