--- a/Remote/nl/uploadsQueueStart.htm
+++ b/Remote/nl/uploadsQueueStart.htm
@@ -1,22 +1,25 @@
+<!-- uploadsQueueStart -->
 <%? !queue_expanded %>
-					<h4><a class="emblink" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
+					<h4><a class="noline" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
 <%? queue_transfers %>
-					<small>(<%= queue_transfers %> active / <%= queue_queued %> queued, using <%= queue_bandwidth %>)</small>
+					(<%= queue_transfers %> actief / <%= queue_queued %> queued, using <%= queue_bandwidth %>)
 <%?%>
 					</h4>
 <%?%><%? queue_expanded %>
-					<h4><a class="emblink" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
+					<h4><a class="noline" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
 <%? queue_transfers %>
-					<small>(<%= queue_transfers %> active / <%= queue_queued %> queued, using <%= queue_bandwidth %>)</small>
+					(<%= queue_transfers %> actief / <%= queue_queued %> queued, using <%= queue_bandwidth %>)
 <%?%>
 					</h4>
-					<table width="100%" cellspacing="0" style="border-collapse: collapse;">
+				<div class="centertable">
+					<table>
 						<tr>
-							<td class="viewheader">File</td>
-							<td class="viewheader">User</td>
-							<td class="viewheader" align="center">Size</td>
-							<td class="viewheader" align="center">Speed</td>
-							<td class="viewheader">User-Agent</td>
-							<td class="viewheader"></td>
+							<th>Bestandsnaam</th>
+							<th>User</th>
+							<th>Grootte</th>
+							<th>Snelheid</th>
+							<th>User-Agent</th>
+							<th></th>
 						</tr>
 <%?%>
+<!-- /uploadsQueueStart -->
