--- a/Remote/fr/home.htm
+++ b/Remote/fr/home.htm
@@ -21,17 +21,19 @@
 					<input type="text" name="search" size="20">
 					<select name="schema">
 						<option value="">G&eacute;n&eacute;ral</option>
-						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
-						<option value="http://www.limewire.com/schemas/video.xsd">Vid&eacute;o</option>
 						<option value="http://www.shareaza.com/schemas/application.xsd">Application</option>
-						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Code source</option>
-						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
-						<option value="http://www.shareaza.com/schemas/image.xsd">Image</option>
+						<option value="http://www.limewire.com/schemas/audio.xsd">Audio</option>
+						<option value="http://www.shareaza.com/schemas/bittorent.xsd">BitTorrent</option>
 						<option value="http://www.limewire.com/schemas/book.xsd">Livre</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Sous-titres</option>
-						<option value="http://www.shareaza.com/schemas/rom.xsd">Image ROM</option>
-						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Bilan</option>
+						<option value="http://www.shareaza.com/schemas/collection.xsd">Collection</option>
+						<option value="http://www.shareaza.com/schemas/image.xsd">Image</option>
 						<option value="http://www.shareaza.com/schemas/presentation.xsd">Pr&eacute;sentation</option>
+						<option value="http://www.shareaza.com/schemas/rom.xsd">Image ROM</option>
+						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">Skin</option>
+						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">Code source</option>
+						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">Bilan</option>
+						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Sous-titres</option>
+						<option value="http://www.limewire.com/schemas/video.xsd">Vid&eacute;o</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Traitement de texte</option>
 					</select>
 					<input type="submit" value="Valider">
