--- a/Remote/pt/downloadsBottom.htm
+++ b/Remote/pt/downloadsBottom.htm
@@ -1,4 +1,4 @@
-									<tr>
-										<td class="viewheader" colspan="7"></td>
+﻿									<tr>
+										<th colspan="7"></th>
 									</tr>
 								</table>
