--- a/Remote/pt/downloadsFooter.htm
+++ b/Remote/pt/downloadsFooter.htm
@@ -1,14 +1,12 @@
-</td> </tr> </table>
+﻿<!--downloadsFooter-->
 <br>
 <form method="get" action="newdownload" ID="Form1">
-	<table align="center">
-		<tr>
-			<td>Baixar Magnet:</td>
-			<td><input type="text" name="uri" size="50"></td>
-			<td>
-				<input type="submit" value=" Ir ">
-			</td>
-		</tr>
-	</table>
+	<div>
+			<label>Baixar Magnet</label>
+			<input type="text" name="uri" size="50" />
+			<input type="submit" value="Ir" />
+	</div>
 </form>
-</td> </tr> </table>
+</div>
+</div>
+<!--/downloadsFooter-->
