--- a/Remote/pt/uploadsHeader.htm
+++ b/Remote/pt/uploadsHeader.htm
@@ -1,25 +1,17 @@
-		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab"><a class="tab" href="Home">Home</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="search">Search</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="downloads">Downloads</a></td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tabsel">Uploads</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab"><a class="tab" href="network">Networks</a></td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<p align="right" style="font-size: 7pt">
-						<a href="?refresh=<%= random %>">Refresh Page</a>
-					</p>
+﻿<!-- uploadsHeader -->
+		<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive"><a href="home" class="noline">Home</a></li>
+				<li class="inactive"><a href="search" class="noline">Procurar</a></li>
+				<li class="inactive"><a href="downloads" class="noline">Downloads</a></li>
+				<li class="active"><a href="uploads" class="noline">Uploads</a></li>
+				<li class="inactive"><a href="network" class="noline">Redes</a></li>
+			</ul>
+		</div>
+		<!-- /tabs -->
+			<div id="frame">
+			<div id="functions">
+						<a href="?refresh=<%= random %>">Atualizar a página</a>
+			</div>
+<!-- /uploadsHeader -->
