--- a/Remote/pt/uploadsQueueStart.htm
+++ b/Remote/pt/uploadsQueueStart.htm
@@ -1,22 +1,25 @@
+﻿<!-- uploadsQueueStart -->
 <%? !queue_expanded %>
-					<h4><a class="emblink" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
+					<h4><a class="noline" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
 <%? queue_transfers %>
-					<small>(<%= queue_transfers %> active / <%= queue_queued %> queued, using <%= queue_bandwidth %>)</small>
+					(<%= queue_transfers %> active / <%= queue_queued %> na fila, usando <%= queue_bandwidth %>)
 <%?%>
 					</h4>
 <%?%><%? queue_expanded %>
-					<h4><a class="emblink" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
+					<h4><a class="noline" href="?queue_collapse=<%= queue_id %>">- <%= queue_caption %></a>
 <%? queue_transfers %>
-					<small>(<%= queue_transfers %> active / <%= queue_queued %> queued, using <%= queue_bandwidth %>)</small>
+					(<%= queue_transfers %> active / <%= queue_queued %> na fila, usando <%= queue_bandwidth %>)
 <%?%>
 					</h4>
-					<table width="100%" cellspacing="0" style="border-collapse: collapse;">
+				<div class="centertable">
+					<table>
 						<tr>
-							<td class="viewheader">File</td>
-							<td class="viewheader">User</td>
-							<td class="viewheader" align="center">Size</td>
-							<td class="viewheader" align="center">Speed</td>
-							<td class="viewheader">User-Agent</td>
-							<td class="viewheader"></td>
+							<th>Arquivo</th>
+							<th>Usuário</th>
+							<th>Tamanho</th>
+							<th>Velocidade</th>
+							<th>Usuário-Agente</th>
+							<th></th>
 						</tr>
 <%?%>
+<!-- /uploadsQueueStart -->
