--- a/Remote/de/downloadsFooter.htm
+++ b/Remote/de/downloadsFooter.htm
@@ -1,14 +1,12 @@
-﻿</td> </tr> </table>
+﻿<!--downloadsFooter-->
 <br>
 <form method="get" action="newdownload" ID="Form1">
-	<table align="center">
-		<tr>
-			<td>Magnet herunterladen:</td>
-			<td><input type="text" name="uri" size="50"></td>
-			<td>
-				<input type="submit" value="Go">
-			</td>
-		</tr>
-	</table>
+	<div>
+			<label>Magnet herunterladen:</label>
+			<input type="text" name="uri" size="50" />
+			<input type="submit" value="Go" />
+	</div>
 </form>
-</td> </tr> </table>
+</div>
+</div>
+<!--/downloadsFooter-->
