--- a/Remote/de/login.htm
+++ b/Remote/de/login.htm
@@ -1,56 +1,34 @@
-﻿		<table width="95%" align="center" cellspacing="0" cellpadding="0">
-			<tr>
-				<td align="center">
-					<table width="100%" cellspacing="0">
-						<tr>
-							<td class="tabedg">&nbsp;</td>
-							<td class="tab">Home</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Suchen</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Downloads</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Uploads</td>
-							<td class="tabfil">&nbsp;</td>
-							<td class="tab">Netzwerk</td>
-							<td class="tabedg">&nbsp;</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-			<tr>
-				<td class="frame">
-					<div>
+﻿<!-- tabs -->
+		<div class="poetry">
+			<ul class="tabs">
+				<li class="inactive">Home</li>
+				<li class="inactive">Suchen</li>
+				<li class="inactive">Downloads</li>
+				<li class="inactive">Uploads</li>
+				<li class="inactive">Netzwerk</li>
+			</ul>
+		</div>
+<!-- /tabs -->
+<!-- main body -->
+		<div class="poetry" id="frame">
+					<div class="padding left">
 						Willkommen beim <b>Shareaza Remote Access.</b>
-						Falls dieser Shareaza-Client auf ihrem PC läuft, geben Sie bitte ihren Benutzernamen und das Passwort für
-						den Remote Access ein und klicken Sie dann auf <b>Login</b>.
+						Falls dieser Shareaza-Client auf ihrem PC läuft, geben Sie bitte ihren Benutzernamen und das Passwort für den Remote Access ein und klicken Sie dann auf <b>Login</b>.
 					</div>
-					<%? failure %>
-					<div align="center" style="color: red; font-weight: bold;">
-						<br>
-						Der Benutzername oder das Passwort das Sie eingegeben haben ist falsch.
-						<br>
-						Bitte versuchen Sie es noch einmal.
+					
+					<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
+					<%? failure %>	Der Benutzername oder das Passwort das Sie eingegeben haben ist falsch, Bitte versuchen Sie es noch einmal.<%?%>
 					</div>
-					<%?%>
+					
+					<div style="text-align: right; width: 24em; margin: 0 auto;">
 					<form method="get" action="">
 					<input type="hidden" name="submit" value="1">
-					<table align="center">
-						<tr>
-							<td>Benutzername:</td>
-							<td><input type="text" name="username" size="20"></td>
-						</tr>
-						<tr>
-							<td>Passwort:</td>
-							<td><input type="password" name="password" size="20" ID="Text1"></td>
-						</tr>
-						<tr>
-							<td colspan="2" align="center">
+						<label>Benutzername:</label>
+						<input type="text" name="username" size="20" /><br />
+						<label>Passwort:</label>
+						<input type="password" name="password" size="20" ID="Text1" /><br />
 								<input type="submit" value="Login">
-							</td>
-						</tr>
-					</table>
 					</form>
-				</td>
-			</tr>
-		</table>
+					</div>
+	</div>
+<!-- /main body -->
