--- a/Remote/de/networkNetStart.htm
+++ b/Remote/de/networkNetStart.htm
@@ -1,24 +1,25 @@
 ﻿					<h4><%= network_caption %></h4>
 <%? !network_connected %>
-					<p style="font-size: 7pt;">
-					Dieses Netzwerk ist <b>deaktiviert</b> -
-					<a href="?connect=<%= network_id %>"><b>Zu <%= network_caption %> verbinden</b></a>
+					<p>
+					Dieses Netzwerk ist <strong>deaktiviert</strong> -
+					<a href="?connect=<%= network_id %>"><strong>Zu <%= network_caption %> verbinden</strong></a>
 					</p>
 <%?%><%? network_connected %>
-					<p style="font-size: 7pt;">
+					<p>
 					Dieses Netzwerk ist aktiviert -
-					<a href="?disconnect=<%= network_id %>"><b><%= network_caption %> deaktivieren</b></a>
+					<a href="?disconnect=<%= network_id %>"><strong><%= network_caption %> Deaktivieren</strong></a>
 					</p>
-					<table width="100%" cellspacing="0" style="border-collapse: collapse;">
+				<div class="centertable">
+					<table>
 						<tr>
-							<td class="viewheader">Adresse</td>
-							<td class="viewheader" align="center">Zeit</td>
-							<td class="viewheader" align="center">Pakete</td>
-							<td class="viewheader" align="center">Bandbreite</td>
-							<td class="viewheader" align="center">Gesamt</td>
-							<td class="viewheader" align="center">Modus</td>
-							<td class="viewheader" align="center">Leaves</td>
-							<td class="viewheader">User-Agent</td>
-							<td class="viewheader"></td>
+							<th>Adresse</th>
+							<th>Zeit</th>
+							<th>Pakete</th>
+							<th>Bandbreite</th>
+							<th>Gesamt</th>
+							<th>Modus</th>
+							<th>Leaves</th>
+							<th>User-Agent</th>
+							<th></th>
 						</tr>
 <%?%>
