made external links open in a new window
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6110 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/en/home.htm
+++ b/Remote/en/home.htm
@@ -47,11 +47,11 @@
 			</div>
 			<h3>Useful links:</h3>
 			<ul>
-				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
-				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
-				<li><a href="http://www.g24u.net/">g24u.net</a></li>
-				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
-				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
-				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
+				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/" target="_blank">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/" target="_blank">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/" target="_blank">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/" target="_blank">eMule content DB</a></li>
 			</ul>
 		</div>
